--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@ h2{
 }
 
 p{
+  width: 50%;
   color: black;
   font-size: 130%;
-  font-family: verdana;
+  font-family: Verdana;
   background-color: white;
   margin: auto;
+  padding: 10px;
 }
 
 body{
@@ -29,7 +31,9 @@ nav{
   color: rgb(92, 165, 164);
 }
 
-#map{
-  text-align: center;
-  margin: auto;
+img{
+  display: block;
+  max-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
