--- a/style.css
+++ b/style.css
@@ -11,21 +11,31 @@ h2{
 }
 
 p{
-  width: 50%;
+  width: 80%;
   color: black;
   font-size: 130%;
   font-family: Verdana;
-  margin: auto;
   padding: 10px;
+  margin: auto;
+  text-align: left;
 }
 
 p, a{
   background-color: white;
 }
 
+img{
+  width: 80%;
+}
+
+.description {
+  width: 100%;
+}
+
 body{
   background-color: rgb(222, 243, 251);
   text-align: center;
+  padding-bottom: 100px;
 }
 
 nav{
